--- a/index.html
+++ b/index.html
@@ -5,9 +5,11 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link href="style.css" rel="stylesheet" />
-    <script src="index.js" defer></script>
   </head>
+
   <body>
-    <h1>Thing</h1>
+    <div class="container"></div>
+
+    <script src="index.js"></script>
   </body>
 </html>
