--- a/index.html
+++ b/index.html
@@ -8,7 +8,11 @@
   </head>
 
   <body>
-    <div class="container"></div>
+    <h1>Etch A Sketch?</h1>
+
+    <div class="box">
+      <div class="container"></div>
+    </div>
 
     <script src="index.js"></script>
   </body>
