--- a/index.html
+++ b/index.html
@@ -8,7 +8,11 @@
   </head>
 
   <body>
-    <h1>Etch A Sketch?</h1>
+    <div class="topRow">
+      <h1>Etch A Sketch?</h1>
+
+      <button class="but">click me</button>
+    </div>
 
     <div class="box">
       <div class="container"></div>
