--- a/index.html
+++ b/index.html
@@ -9,9 +9,9 @@
 
   <body>
     <div class="topRow">
-      <h1>Etch A Sketch?</h1>
+      <h1>Mouse-A-Sketch?</h1>
 
-      <button class="but">click me</button>
+      <button id="button">Change size</button>
     </div>
 
     <div class="box">
